<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.matvey.perelman.notepad.MainActivity">
    <item
        android:id="@+id/copy_itm"
        android:title="@string/action_copy" />
    <item
        android:id="@+id/cut_itm"
        android:icon="@mipmap/ic_launcher_round"
        android:title="@string/action_cut" />
    <item
        android:id="@+id/paste_itm"
        android:enabled="false"
        android:title="@string/action_paste" />
    <item
        android:id="@+id/create_itm"
        android:title="@string/action_create" />
    <item
        android:id="@+id/rename_itm"
        android:title="@string/action_rename" />
    <item
        android:id="@+id/back_itm"
        android:orderInCategory="100"
        android:title="@string/action_back"
        app:showAsAction="never" />
</menu>
